Fixed challenge_1 - Broken CSS

--- a/challenge_1/style.css
+++ b/challenge_1/style.css
@@ -1,27 +1,28 @@
-bod {
+body {
     background-color: black
-    color: white
-    font-familia: Helveticalalala;
-    font-size: 22px
+    color #FFFFFF;
+    font-family: "Helvetica";
+    font-size: 22px;
     padding: 20px;
 }
 
 h1 {
-    colour: 255, 203, 5; /* rgb value */
-    textalign: center;
+    color: 255, 203, 5; /* rgb value */
+    text-align: center;
 }
 
-#big_div 
-    border: 3px solid 2E549B; /* hex value */
+#big_div {
+    border: 3px solid #2E549B; /* hex value */
     margin: 30px;
-    pading: 20px;
+    padding: 20px;
 }
 
-pokemon_name {
-    text-align: center
+#pokemon_name {
+    text-align: center;
     font-size: 150;
-    font: bold
+    font: bold;
     margin: 10px;
+}
 
 .sub_div {
     display: flex;
@@ -32,6 +33,7 @@ img {
     padding-right: 50px;
 }
 
-special {
-    font-wieght: cold
+.special {
+    font-weight: bold;
     color: 255, 203, 5; /* rgb value */
+}
